--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "amm-sdk": "file:../amm-sdk",
     "big.js": "^6.0.3",
     "bn.js": "^5.1.3",
     "chart.js": "^2.9.4",
