--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ REACT_APP_COINGECKO_API_URL = https://api.coingecko.com/api/v3/
 REACT_APP_PROTOCOL_ACCOUNT_ID = amm.flux-dev
 REACT_APP_FUNGIBLE_TOKEN_ACCOUNT_ID = ft.flux-dev
 REACT_APP_GA_ID = G-1KN2SW2G2Y
+REACT_APP_NETWORK = testnet
