--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ REACT_APP_FUNGIBLE_TOKEN_ACCOUNT_ID = ft.flux-dev
 REACT_APP_GA_ID = G-1KN2SW2G2Y
 REACT_APP_NETWORK = testnet
 REACT_APP_WRAPPED_NEAR_ACCOUNT_ID = wrap.near
+REACT_APP_NULL_CONTRACT = null_contract.flux-dev
