--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-REACT_APP_API_URL = https://mainnet-api.flux.xyz/graphql
+REACT_APP_API_URL = https://api.flux.xyz/graphql
 PUBLIC_URL = .
 REACT_APP_COINGECKO_API_URL = https://api.coingecko.com/api/v3/
-REACT_APP_PROTOCOL_ACCOUNT_ID = amm.flux-dev
-REACT_APP_FUNGIBLE_TOKEN_ACCOUNT_ID = ft.flux-dev
+REACT_APP_PROTOCOL_ACCOUNT_ID = beta-amm.flux-dev
+REACT_APP_FUNGIBLE_TOKEN_ACCOUNT_ID = wnear.flux-dev
 REACT_APP_GA_ID = G-1KN2SW2G2Y
-REACT_APP_NETWORK = mainnet
-REACT_APP_WRAPPED_NEAR_ACCOUNT_ID = wrap.near
-REACT_APP_NULL_CONTRACT = null_address.near
+REACT_APP_NETWORK = testnet
+REACT_APP_WRAPPED_NEAR_ACCOUNT_ID = wnear.flux-dev
+REACT_APP_NULL_CONTRACT = null_contract.flux-dev
