fix(env): Fix issue where background could not be found

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 REACT_APP_API_URL = https://api.flux.xyz/graphql
-PUBLIC_URL = .
+PUBLIC_URL = https://fluxprotocol.github.io/beta/
 REACT_APP_COINGECKO_API_URL = https://api.coingecko.com/api/v3/
 REACT_APP_PROTOCOL_ACCOUNT_ID = beta-amm.flux-dev
 REACT_APP_FUNGIBLE_TOKEN_ACCOUNT_ID = wnear.flux-dev
