chore(env): Set banana's address dynamically

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ REACT_APP_GA_ID = G-1KN2SW2G2Y
 REACT_APP_NETWORK = testnet
 REACT_APP_WRAPPED_NEAR_ACCOUNT_ID = wnear.flux-dev
 REACT_APP_NULL_CONTRACT = null_contract.flux-dev
+REACT_APP_BANANAS_ACCOUNT_ID = berryclub.ek.near
